k8s/smarthome/homebox/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebox
  namespace: smarthome
spec:
  replicas: 2
  selector:
    matchLabels:
      app: homebox
  template:
    metadata:
      labels:
        app: homebox
    spec:
      containers:
        - name: homebox
          image: ghcr.io/sysadminsmedia/homebox:latest
          resources:
            requests:
              memory: "128Mi"
              cpu: "128m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 7745
              protocol: TCP
              name: http
          startupProbe:
            httpGet:
              path: /api/v1/status
              port: 7745
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/v1/status
              port: 7745
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/v1/status
              port: 7745
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
