k8s/smarthome/homebox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homebox
  namespace: smarthome
spec:
  selector:
    app: homebox
  ports:
    - port: 7745
      targetPort: 7745
      protocol: TCP
      name: http
