k8s/smarthome/homebox/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homebox-ingress
  namespace: smarthome
  labels:
    app.kubernetes.io/name: homebox
spec:
  rules:
    - host: homebox.zefirsroyal.cloud
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: homebox
                port:
                  number: 7745
